configurando conexion en App.config y creando clase D_Conexion

--- a/Ferreteria/Presentacion/App.config
+++ b/Ferreteria/Presentacion/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+<!-- Conectando a la base de datos -->
+<connectionStrings>
+	<add name="conectar" connectionString="Server=ANDRES;Integrated Security=yes;Database=Mantenimiento_Productos"/>
+</connectionStrings>
 </configuration>
