--- a/Ferreteria/Datos/Datos.csproj
+++ b/Ferreteria/Datos/Datos.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="D_Categoria.cs" />
+    <Compile Include="D_Marcas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
