DgvProductos funcionando, chequear el tamanio de los icons

--- a/Ferreteria/Datos/Datos.csproj
+++ b/Ferreteria/Datos/Datos.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="D_Categoria.cs" />
     <Compile Include="D_Marcas.cs" />
+    <Compile Include="D_Productos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
