--- a/Ferreteria/Entidades/Entidades.csproj
+++ b/Ferreteria/Entidades/Entidades.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="E_Categorias.cs" />
     <Compile Include="E_Marcas.cs" />
+    <Compile Include="E_Productos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
