--- a/Ferreteria/Negocios/Negocios.csproj
+++ b/Ferreteria/Negocios/Negocios.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="N_Categoria.cs" />
     <Compile Include="N_Marca.cs" />
+    <Compile Include="N_Productos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
