--- a/Ferreteria/Negocios/Negocios.csproj
+++ b/Ferreteria/Negocios/Negocios.csproj
@@ -44,6 +44,7 @@
     <Compile Include="N_Categoria.cs" />
     <Compile Include="N_Marca.cs" />
     <Compile Include="N_Productos.cs" />
+    <Compile Include="N_Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
