--- a/Ferreteria/Negocios/Negocios.csproj
+++ b/Ferreteria/Negocios/Negocios.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="N_Categoria.cs" />
+    <Compile Include="N_Empleado.cs" />
     <Compile Include="N_Marca.cs" />
     <Compile Include="N_Productos.cs" />
     <Compile Include="N_Usuario.cs" />
