Breves cambios en los frames

--- a/Ferreteria/Datos/Datos.csproj
+++ b/Ferreteria/Datos/Datos.csproj
@@ -45,8 +45,10 @@
     <Compile Include="D_Categoria.cs" />
     <Compile Include="D_Marcas.cs" />
     <Compile Include="D_Productos.cs" />
+    <Compile Include="D_Rol.cs" />
     <Compile Include="D_Usuario.cs" />
     <Compile Include="D_Empleado.cs" />
+    <Compile Include="D_Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
