--- a/Ferreteria/Entidades/Entidades.csproj
+++ b/Ferreteria/Entidades/Entidades.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="E_Categorias.cs" />
+    <Compile Include="E_Cliente.cs" />
     <Compile Include="E_Empleado.cs" />
     <Compile Include="E_Marcas.cs" />
     <Compile Include="E_Productos.cs" />
