--- a/Ferreteria/Entidades/Entidades.csproj
+++ b/Ferreteria/Entidades/Entidades.csproj
@@ -46,6 +46,7 @@
     <Compile Include="E_Empleado.cs" />
     <Compile Include="E_Marcas.cs" />
     <Compile Include="E_Productos.cs" />
+    <Compile Include="E_Proveedor.cs" />
     <Compile Include="E_Rol.cs" />
     <Compile Include="E_Usuario.cs" />
     <Compile Include="E_Usuarios.cs" />
