--- a/Ferreteria/Negocios/Negocios.csproj
+++ b/Ferreteria/Negocios/Negocios.csproj
@@ -46,6 +46,7 @@
     <Compile Include="N_Empleado.cs" />
     <Compile Include="N_Marca.cs" />
     <Compile Include="N_Productos.cs" />
+    <Compile Include="N_Proveedor.cs" />
     <Compile Include="N_Rol.cs" />
     <Compile Include="N_Usuario.cs" />
     <Compile Include="N_Usuarios.cs" />
