Muestra los productos, los busca solo falta que al seleccionarlos se agreguen junto a la cantidad y el sub total

--- a/Ferreteria/Datos/Datos.csproj
+++ b/Ferreteria/Datos/Datos.csproj
@@ -51,6 +51,7 @@
     <Compile Include="D_Usuario.cs" />
     <Compile Include="D_Empleado.cs" />
     <Compile Include="D_Usuarios.cs" />
+    <Compile Include="D_Ventas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
