--- a/Ferreteria/Entidades/Entidades.csproj
+++ b/Ferreteria/Entidades/Entidades.csproj
@@ -50,6 +50,7 @@
     <Compile Include="E_Rol.cs" />
     <Compile Include="E_Usuario.cs" />
     <Compile Include="E_Usuarios.cs" />
+    <Compile Include="E_Ventas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
