--- a/Ferreteria/Presentacion/App.config
+++ b/Ferreteria/Presentacion/App.config
@@ -9,7 +9,7 @@
 <!-- Conectando a la base de datos -->
 <connectionStrings>
 
-    <add name="conectar" connectionString="Server=DESKTOP-6PDU0AL;Integrated Security=yes;Database=Mantenimiento_Productos" />
+    <add name="conectar" connectionString="Server=ANDRES;Integrated Security=yes;Database=Mantenimiento_Productos" />
     
 
 </connectionStrings>
