Desarrollando el apartado de la analitica

--- a/Ferreteria/Entidades/Entidades.csproj
+++ b/Ferreteria/Entidades/Entidades.csproj
@@ -44,6 +44,7 @@
     <Compile Include="E_Categorias.cs" />
     <Compile Include="E_Cliente.cs" />
     <Compile Include="E_Empleado.cs" />
+    <Compile Include="E_Grafica.cs" />
     <Compile Include="E_Marcas.cs" />
     <Compile Include="E_Productos.cs" />
     <Compile Include="E_Proveedor.cs" />
