--- a/Ferreteria/Presentacion/Presentacion.csproj
+++ b/Ferreteria/Presentacion/Presentacion.csproj
@@ -270,6 +270,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>dataReportexsd.xsd</DependentUpon>
     </Compile>
+    <Compile Include="FrmBtnDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmBtnDashboard.Designer.cs">
+      <DependentUpon>FrmBtnDashboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmBuscarClientes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -399,6 +405,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <EmbeddedResource Include="FrmBtnDashboard.resx">
+      <DependentUpon>FrmBtnDashboard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmBuscarClientes.resx">
       <DependentUpon>FrmBuscarClientes.cs</DependentUpon>
     </EmbeddedResource>
